--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "December 29, 2019" "ugrep 1.6.10" "User Commands"
+.TH UGREP "1" "December 31, 2019" "ugrep 1.6.11" "User Commands"
 .SH NAME
 \fBugrep\fR -- universal file pattern searcher
 .SH SYNOPSIS
@@ -694,7 +694,7 @@ the size of the match, counting bytes.
 .IP \fB%e\fR
 the ending byte offset of the match.
 .IP \fB%u\fR
-select uniquely matched lines only unless option \fB-u\fR is used.
+select unique lines only unless option \fB-u\fR is used.
 .IP \fB%,\fR
 if not the first match: a comma, same as \fB%[,]>\fR.
 .IP \fB%:\fR
@@ -726,8 +726,9 @@ reverses the separator to the default separator or the separator specified by
 .PP
 Formatted output is written for each matching pattern, which means that a line
 may be output multiple times when patterns match more than once on the same
-line.  Use format field \fB%u\fR to output matching lines only once unless
-option \fB-u\fR, \fB--ungroup\fR is used or when a newline is matched.
+line.  When field \fB%u\fR is found anywhere in the specified format string,
+matching lines are output only once unless option \fB-u\fR, \fB--ungroup\fR is
+used or when a newline is matched.
 .PP
 Additional formatting options:
 .IP \fB--format-begin\fR=\fIFORMAT\fR
