--- a/man/ugrep.1
+++ b/man/ugrep.1
@@ -1,4 +1,4 @@
-.TH UGREP "1" "January 10, 2020" "ugrep 1.7.0" "User Commands"
+.TH UGREP "1" "January 11, 2020" "ugrep 1.7.1" "User Commands"
 .SH NAME
 \fBugrep\fR -- universal file pattern searcher
 .SH SYNOPSIS
@@ -496,8 +496,8 @@ Prints a zero\-byte after the file name.
 .TP
 \fB\-z\fR, \fB\-\-decompress\fR
 Decompress files to search, when compressed.  Archives (.cpio,
-.pax, .tar, .zip) and compressed archives (e.g. .taz, .tgz, .tpz,
-.tbz, .tbz2, .tb2, .tz2, .tlz, and .txz) are searched and matching
+\&.pax, .tar, .zip) and compressed archives (e.g. .taz, .tgz, .tpz,
+\&.tbz, .tbz2, .tb2, .tz2, .tlz, and .txz) are searched and matching
 pathnames of files in archives are output in braces.  If \fB\-g\fR, \fB\-O\fR,
 \fB\-M\fR, or \fB\-t\fR is specified, searches files within archives whose name
 matches globs, matches file name extensions, matches file
